After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696857 - GThreadedResolver: set an error if no records could be found
GThreadedResolver: set an error if no records could be found
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: network
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-03-29 14:41 UTC by Giovanni Campagna
Modified: 2013-06-04 20:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GThreadedResolver: set an error if no records could be found (1.09 KB, patch)
2013-03-29 14:41 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-03-29 14:41:43 UTC
Fixes a crash in telepathy-gabble (which runs with fatal criticals)
Comment 1 Giovanni Campagna 2013-03-29 14:41:46 UTC
Created attachment 240123 [details] [review]
GThreadedResolver: set an error if no records could be found

It is possible that the upstream servers return something, but
we then filter all results because they are of the wrong type.
In that case the API and subsequent GTask calls expect a GError
to be set.
Comment 2 Dan Winship 2013-04-02 20:25:29 UTC
Comment on attachment 240123 [details] [review]
GThreadedResolver: set an error if no records could be found

it looks like the windows function a little bit further down probably needs exactly the same fix. (I think you can just cut and paste exactly the same code.)

ok to commit with that fix
Comment 3 Giovanni Campagna 2013-04-02 21:04:48 UTC
Attachment 240123 [details] pushed as 3456152 - GThreadedResolver: set an error if no records could be found
Comment 4 Martin Holec 2013-06-04 20:06:31 UTC
Could you backport this patch to glib2-2.36? This will fix telepathy-gabble crash when connecting to Jabber servers.

report: https://bugzilla.redhat.com/show_bug.cgi?id=956316